# CAS-manager

./: .gitignore  README.md  button.py  cas_db.db  cas_main_file.py  cas_managing_db.py  cas_portfolios.db  cli.py  database_path.py  implementating_alter_abc.py  implementing_alter_abc.py  inserting_updating_db.py  insterting_updating_db.py  pyproject.toml  pytest.ini  requirements.txt  the_base_for_inserting_updating_db.py
add_frame/: add_frame_constants.py  add_modes.py  implementing_alter_abc.py  inserting_updating_interacting_with_db.py  insterting_updating_db.py  insterting_updating_interacting_with_gui.py  test_data_validation.py  test_objects.py  the_base_for_inserting_updating_db.py  validation_descriptors.py
frames/: move_button.py
frames/main_frame/: go_to_url.py  searching_surname.py  students_based_on_surname.py
src/add_frame_package/: __init__.py  add_modes.py
src/add_frame_package/db/: implementing_alter_abc.py  inserting_updating_interacting_with_db.py  the_base_for_inserting_updating_db.py  validation_descriptors.py
src/add_frame_package/gui/: add_frame_layout.py  data_entries.py  inserting_updating_interacting_with_gui.py  (+2 more)
src/database_management/: db_creation_management.py  db_manager.py
src/frames/: cas_managing_db_two.py  move_button.py
src/main/: main.py
src/paths/: database_path.py  theme_path.py
src/students_alter/: __init__.py
tests/students_alter/: test_data_validation.py  test_objects.py  testing_gui_layout.py
tests/students_display/: test_construct_query.py  test_fetch_classes_from_db.py  test_fetch_students_from_db.py
(+40 files in other folders)
